# DjangoDynamicDrive

./: LICENSE  pyproject.toml
DjangoDynamicDrive/: __init__.py
